--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cody",
+  "homepage": "https://bigebro.github.io/cody-git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-messenger-chat-plugin": "^1.0.9",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -28,6 +30,8 @@
     "react-spring": "^8.x"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -52,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "prettier": "2.5.0"
   }
 }
