--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-messenger-customer-chat": "^0.8.0",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.4",
+    "react-spring": "^9.4.1",
     "reactstrap": "^9.0.1",
+    "start": "^5.1.0",
     "styled-components": "^5.3.3",
     "swiper": "^6.4.9",
     "typeface-roboto": "^1.1.13",
