--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cody",
-  "homepage": "https://bigebro.github.io",
+  "homepage": "https://bigebro.github.io/cody-git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
