--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^4.1.0",
     "@react-spring/web": "^9.3.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
+    "hamburger-react": "^2.4.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
@@ -17,6 +19,7 @@
     "react-messenger-chat-plugin": "^1.0.9",
     "react-messenger-customer-chat": "^0.8.0",
     "react-modal": "^3.14.4",
+    "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.4",
