--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.1",
     "react-icons": "^4.3.1",
     "react-messenger-chat-plugin": "^1.0.9",
     "react-messenger-customer-chat": "^0.8.0",
